--- a/wingrow_ui/client/package.json
+++ b/wingrow_ui/client/package.json
@@ -21,6 +21,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.1",
